attempt to use tabs

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -276,7 +276,7 @@ At this point, you will need to configure all the clients with an ansible user a
     % ipa dnsconfig-mod --allow-sync-ptr=True
     ```
 
-=== Ansible Method
+=== "Ansible Method"
 
     Ensure that your ansible controller is setup and install the collections as needed.
 
